# torque-tracking-ML

./: MUJOCO_LOG.TXT  README.md  compensate.py  control.py  control_RL.py  controller_Kinova_API.py  data_extractor.py  data_loader.py  data_loader_2.py  dataset_creation_script.sh  draft.py  error.py  gym_Kinova.py  manual.md  net.py  net_2.py  plotting.py  presentation.md  simulation.py  torch_script_export.py  traced_resnet_model.pt  train.py  train_2.py  trained_model.pt
CPP_port/: CMakeLists.txt  estimator.cpp
CPP_port/loss_visualize/: loss_plotter.py
Kinova_RL/: setup.py
LSTM/: data_extractor  data_extractor.py  data_extractor_multivariate.py  dataloader_LSTM.py  dataloader_LSTM_multivariate.py  net_LSTM.py  predict_LSTM_multivariate.py  train_LSTM.py  train_LSTM_multivariate.py
MLP/: dataloader.py  predict.py  train.py
data/: mean.pth.tar
datasets/: mean.pth.tar  train.txt  valid.txt
estimator_final/: trained.model
geometric_model/: Kinova_7DOFs.py  forward_dynamics.py
joint_friction_simulation/: friction_visualizer.py  optimal_Stribeck_Kinova  stribeck_function.py  stribeck_stiction.py
mc_controller/: mc_controller.py
python_controller/: control.py  error.py  gym_Kinova.py  simulation.py  torque_control.py  utilities.py
scripts/: extract_full_traj.py  extract_mc_log.py
trained_nets/: trained.model  trained.pth  trained_0.model  trained_100.model  trained_150.model  trained_200.model  trained_250.model  trained_300.model  trained_350.model  trained_400.model  trained_450.model  trained_50.model  trained_500.model  trained_550.model  (+8 more)
(+96 files in other folders)
